--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -25,7 +25,7 @@
 			<section>
 				<div>
 					<h2>Services</h2>
-						<p>We work with you</p>
+					<p>We work with you</p>
 					<h3>Design & Concept</h3>
 					<h3>Digital Strategy</h3>
 					<h3>Content Strategy</h3>
@@ -98,8 +98,8 @@
 				</div>
 			</section>
 		</main>
-		<div>
-			<footer>Footer</footer>
-		</div>
+		<footer>
+			<div>Footer</div>
+		</footer>
     </body>
 </html>
