--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -19,8 +19,8 @@
 					<a href="/">Home</a>
 					<a href="#services">Services</a>
 					<a href="#works">Works</a>
-					<a href="#about ">About </a>
-					<a href="#latest_news ">Latest_news </a>
+					<a href="#about ">About</a>
+					<a href="#latest_news ">Latest news</a>
 					<a href="#testimonials">Testimonials</a>
 					<a href="#contact ">Contact</a>
 				</nav>
