--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -44,18 +44,12 @@
 						<p>We work with you</p>
 					</header>
 					<div>
-						<h3>Design & Concept</h3>
-						<a href="#">Design & Concept</a>
-						<h3>Digital Strategy</h3>
-						<a href="#">Digital Strategy</a>
-						<h3>Content Strategy</h3>
-						<a href="#">Content Strategy</a>
-						<h3>UX Design</h3>
-						<a href="#">UX Design</a>
-						<h3>Web Development</h3>
-						<a href="#">Web Development</a>
-						<h3>Social Media</h3>
-						<a href="#">Social Media</a>
+						<h3><a href="#">Design & Concept</a></h3>
+						<h3><a href="#">Digital Strategy</a></h3>
+						<h3><a href="#">Content Strategy</a></h3>
+						<h3><a href="#">UX Design</a></h3>
+						<h3><a href="#">Web Development</a></h3>
+						<h3><a href="#">Social Media</a></h3>
 					</div>
 				</div>
 			</section>
@@ -68,16 +62,13 @@
 					</header>
 					<div>
 						<article>
-							<h3>Interior Design</h3>
-							<a href="#">Interior Design</a>
+							<h3><a href="#">Interior Design</a></h3>
 						</article>
 						<article>
-							<h3>Web Development</h3>
-							<a href="#">Web Development</a>
+							<h3><a href="#">Web Development</a></h3>
 						</article>
 						<article>
-							<h3>Personal Brand</h3>
-							<a href="#">Personal Brand</a>
+							<h3><a href="#">Personal Brand</a></h3>
 						</article>
 					</div>
 				</div>
@@ -121,9 +112,8 @@
 						</article>
 						<article>
 							<p>Social</p>
-							<h3>Bestiarum vero nullum iudicium puto.</h3>
+							<h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-							<a href="#">Bestiarum vero nullum iudicium puto.</a>
 						</article>	
 					</div>
 				</div>
