--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -104,21 +104,21 @@
 							<p>Career</p>
 							<h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-							<cite>By Kelly D.</cite>
+							<p>By Kelly D.</p>
 							<a href="#">Hoc loco tenere se Triarius non potuit.</a>
 						</article>
 						<article>
 							<p>Digital Life</p>
 							<h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-							<cite>By William A.</cite>
+							<p>By William A.</p>
 							<a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a>
 						</article>
 						<article>
 							<p>Social</p>
 							<h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
-							<cite>By Frances J.</cite>
+							<p>By Frances J.</p>
 						</article>	
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 		</main>
 		<!-- Footer -->
 		<footer>
-			<p>234 Washington Street<br>Urbana, Illinois</p>
+			<address>Washington Street<br>Urbana, Illinois</address>
 			<div>
 				<ul>
 					<li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
