--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -159,7 +159,9 @@
 		</main>
 		<!-- Footer -->
 		<footer>
-			<address>Washington Street<br>Urbana, Illinois</address>
+			<address>
+				Washington Street<br>Urbana, Illinois
+			</address>
 			<div>
 				<ul>
 					<li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
