--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -158,7 +158,7 @@
 		<!-- Footer -->
 		<footer>
 			<address>
-				Washington Street<br>Urbana, Illinois
+				234 Washington Street<br>Urbana, Illinois
 			</address>
 			<div>
 				<ul>
