--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -97,7 +97,7 @@
 							<p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
 						</pre>
 						<div>
-							<p>Curabitur sit amet turpis cursus massa mollis <strong>highlighted</strong>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <strong>highlighted</strong> mi consequat ut. Cras nec quam sed sapien ultricies <strong>highlighted</strong> ut sed metus.</p>
+							<p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
 						</div>
 					</div>
 				</div>
