ajout de balise code

--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -121,18 +121,18 @@
 						</tr>
 						<tr>
 							<th scope="row">Star Wars: Episode IV - A New Hope</th>
-							<th>George Lucas</th>
-							<th>May 25th, 1977</th>
+							<th><code>George Lucas</code></th>
+							<th><code>May 25th, 1977</code></th>
 						</tr>
 						<tr>
 							<th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
-							<th>Irvin Kershner</th>
-							<th>May 21st, 1980</th>
+							<th><code>Irvin Kershner</code></th>
+							<th><code>May 21st, 1980</code></th>
 						</tr>
 						<tr>
 							<th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
-							<th>Richard Marquand</th>
-							<th>May 25th, 1983</th>
+							<th><code>Richard Marquand</code></th>
+							<th><code>May 25th, 1983</code></th>
 						</tr>
 					</tbody>
 				</table>
