--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -113,26 +113,28 @@
 					<caption>
 						Star Wars Trilogy Data
 					</caption>
-					<tbody>
+					<thead>
 						<tr>
 							<th scope="col">Title</th>
 							<th scope="col">Director</th>
 							<th scope="col">Release Date</th>
 						</tr>
+					</thead>
+					<tbody>
 						<tr>
 							<th scope="row">Star Wars: Episode IV - A New Hope</th>
-							<th><code>George Lucas</code></th>
-							<th><code>May 25th, 1977</code></th>
+							<th>George Lucas</th>
+							<th>May 25th, 1977</th>
 						</tr>
 						<tr>
 							<th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
-							<th><code>Irvin Kershner</code></th>
-							<th><code>May 21st, 1980</code></th>
+							<th>Irvin Kershner</th>
+							<th>May 21st, 1980</th>
 						</tr>
 						<tr>
 							<th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
-							<th><code>Richard Marquand</code></th>
-							<th><code>May 25th, 1983</code></th>
+							<th>Richard Marquand</th>
+							<th>May 25th, 1983</th>
 						</tr>
 					</tbody>
 				</table>
